<resources>
    <string name="app_name">PracticaEvaluable5</string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="nombre">Nombre</string>
    <string name="borrar">Borrar</string>
    <string name="cargando">Cargando...</string>
    <string name="no_red">No hay conexión de red.</string>
    <string name="alerta">¡Alerta!</string>
    <string name="confirmacion_borrado">¿Estás seguro que deseas eliminar %1$s?</string>
    <string name="borrado_coche_ok">Coche borrado con éxito</string>
    <string name="datos_vendedor">Datos Vendedor</string>
    <string name="nombre_">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="edad">Edad:</string>
    <string name="telefono">Telefono:</string>
    <string name="borrar_vendedor">Borrar Vendedor</string>
    <string name="realizar_venta">Realizar Venta</string>
    <string name="modificar_vendedor">Modificar vendedor</string>
    <string name="cancelar">Cancelar</string>
    <string name="modificar">Modificar</string>
    <string name="vendedor_borrado_ok">Vendedor borrado con exito</string>
    <string name="mod_vendedor">Modifica el vendedor</string>
    <string name="mod_vendedor_sin_datos">Vendedor no modificado por falta de datos</string>
    <string name="modelo">Modelo:</string>
    <string name="amyadir">Añadir</string>
    <string name="rellenar_campos">Debes rellenar todos los campos</string>
    <string name="marca">Marca:</string>
    <string name="coche_anyadido">Coche añadido con exito</string>
    <string name="vendedor_mod_ok">Vendedor modificado con exito</string>
    <string name="filtrar_por_nombre">Filtrar por nombre</string>
    <string name="volver">Volver</string>
    <string name="coches_disponibles">Coches Disponibles</string>
    <string name="ventas_realizadas">Ventas Realizadas</string>
    <string name="sin_ventas">Todavía no ha realizado ninguna venta</string>
    <string name="precio">Precio:</string>
    <string name="matr_cula">Matrícula:</string>
    <string name="aceptar">Aceptar</string>
    <string name="venta_no_realizada">Venta no realizada, faltan datos por introducir</string>
    <string name="venta_realizada">Venta Realizada</string>
    <string name="vende_coche">Vender Coche</string>
    <string name="borrar_coche">Borrar Coche</string>
    <string name="anyadir_coche">Añadir Coche</string>
    <string name="ayuda">Ayuda</string>
    <string name="mensaje_ayuda">Pulse sobre un nombre para ver sus datos y poder realizar una venta, por otro lado si mantiene pulsado sobre él podrá modificar sus datos o borrar el vendedor.</string>
    <string name="id_venta_">") ID venta: "</string>
    <string name="precio_">"- Precio: "</string>
    <string name="matricula_">"- Matrícula: "</string>
    <string name="error_buffer">"Error al cerrar el buffer de lectura: "</string>
</resources>
