<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/dimen60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tituloDatosVendedor"
                android:text="@string/datos_vendedor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textSize="@dimen/dimen22sp"
                android:textStyle="bold"
                android:gravity="center" />

            <LinearLayout
                android:id="@+id/linearNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen20dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tituloNombre"
                    android:text="@string/nombre_"
                    android:layout_width="@dimen/dimen0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.32"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.68" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen8dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tituloApellidos"
                    android:text="@string/apellidos"
                    android:layout_width="@dimen/dimen0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.32"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewApellidos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.68" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen8dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/tituloEdad"
                    android:text="@string/edad"
                    android:layout_width="@dimen/dimen0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.32"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewEdad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.68" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen8dp"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/titulotelefono"
                    android:text="@string/telefono"
                    android:layout_width="@dimen/dimen0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.32"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewTelefono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.68" />

            </LinearLayout>

            <View style="@style/Divider"
                android:layout_marginTop="@dimen/dimen10dp"/>

            <TextView
                android:id="@+id/textViewTituloCochesVent"
                android:text="@string/coches_disponibles"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_horizontal_margin"

                android:textSize="@dimen/dimen22sp"
                android:textStyle="bold"
                android:gravity="center" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinnerCocheVendedor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

            </android.support.v7.widget.AppCompatSpinner>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/dialogTextViewPrecio"
                    android:text="@string/precio"
                    android:textSize="@dimen/dimen16sp"
                    android:layout_width="@dimen/dimen0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.16"/>

                <EditText
                    android:id="@+id/editTextPrecio"
                    android:textSize="@dimen/dimen16sp"
                    android:layout_width="@dimen/dimen0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="0.34" />

                <TextView
                    android:id="@+id/dialogTextViewMatricula"
                    android:text="@string/matr_cula"
                    android:textSize="@dimen/dimen16sp"
                    android:layout_width="@dimen/dimen0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.22"/>

                <EditText
                    android:id="@+id/editTextMatricula"
                    android:textSize="@dimen/dimen16sp"
                    android:layout_width="@dimen/dimen0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.28"/>

            </LinearLayout>

            <View style="@style/Divider"
                android:layout_marginTop="@dimen/dimen10dp"/>

            <TextView
                android:id="@+id/textViewTituloVentas"
                android:text="@string/ventas_realizadas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textSize="@dimen/dimen22sp"
                android:textStyle="bold"
                android:gravity="center" />

            <TextView
                android:id="@+id/textViewVentas"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="1">

        <Button
            android:id="@+id/botonVolver"
            android:text="@string/volver"
            android:background="@drawable/boton_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>

        <Button
            android:id="@+id/botonRealizarVenta"
            android:text="@string/realizar_venta"
            android:background="@drawable/boton_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>

    </LinearLayout>

</RelativeLayout>