<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageCarAdd"
        android:src="@drawable/car_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen40dp"
        android:layout_centerHorizontal="true"
        android:scaleX="1.2"
        android:scaleY="1.2" />

    <LinearLayout
        android:id="@+id/linearTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen30dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/imageCarAdd"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textViewAnayadirMarca"
            android:text="@string/marca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen22sp"
            android:layout_weight="0.1" />

        <EditText
            android:id="@+id/editTextMarca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen22sp"
            android:layout_weight="0.9"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/linearTop"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textViewAnayadirModelo"
            android:text="@string/modelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen22sp"
            android:layout_weight="0.1" />

        <EditText
            android:id="@+id/editTextModelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dimen22sp"
            android:layout_weight="0.9" />

    </LinearLayout>

    <Button
        android:id="@+id/botonAnyadirCoche"
        android:text="@string/amyadir"
        android:background="@drawable/boton_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>